--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="path/node_modules/keen-slider/keen-slider.min.css"
     />
     <link rel="stylesheet" href="style/style.css">
+    <script defer src="script/script.js"></script>
     <title>Tabelionato de Protesto de Títulos da Comarca de Brumadinho</title>
 </head>
 <body>
@@ -35,22 +36,21 @@
             <img src="imagens/logo.png" alt="logo IRC">
 
         </div>
+
+
         <div class="menu">
-
-            <ul><li>Inicio</li></ul>
-            <ul><li>Quem Somos</li></ul>
-            <ul><li>Serviços</li></ul>
-            <ul><li>Contato</li></ul>
-
+        <nav class="nav">
+            <button class="hamburger"></button>
+            <ul class="nav-list">
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">O Tabelionato</a></li>
+              <li><a href="#">Sobre</a></li>
+              <li><a href="#">Contato</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </nav>
         </div>
-
-        <div class="numero">
-            <div class="caixatel">
-                <a href="https://wa.me/5534998030304" target="_blank">
-                    <p><i class="fa-brands fa-whatsapp"></i> 34 9 9897-9676</p></a>
-
-        </div>            
-            </div>
+        
                 </div>
 
    </header>
@@ -166,6 +166,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 
 
