--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="path/node_modules/keen-slider/keen-slider.min.css"
     />
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/mediaQuery280.css">
     <script defer src="script/script.js"></script>
     <title>Tabelionato de Protesto de Títulos da Comarca de Brumadinho</title>
 </head>
@@ -49,7 +50,7 @@
                     </ul>
                 </div>
                 <div class="login-button">
-                    <button><a href="#">Portal de Títulos</a></button>
+                    <button><a href="https://www.pesquisaprotesto.com.br/servico/envio-de-titulo" target="_blank">Portal de Títulos</a></button>
                 </div>
     
                 <div class="mobile-menu-icon">
@@ -110,24 +111,27 @@
         <div class="card">
           <img class="card-img-top" src="imagens/blue modern business banner landscape.jpg" alt="Imagem de capa do card">
           <div class="card-body">
-            <h5 class="card-title">Título do card</h5>
-            <p class="card-text">Este é um card mais longo com suporte a texto embaixo, que funciona como uma introdução a um conteúdo adicional. Este conteúdo é um pouco maior.</p>
-            <p class="card-text"><small class="text-muted">Atualizados 3 minutos atrás</small></p>
+            <h5 class="card-title">Intimação Online</h5>
+            <p class="card-text">Evite ser protestado por edital! Faça seu cadastro de intimação online agora mesmo. Com nosso serviço, você realiza o registro de forma rápida e eficiente, sem burocracia. Proteja-se e garanta seus direitos.</p>
+            <p>Cadastre-se já!</p>
+            <a href="https://app.clicksign.com/fluxia/30860645-12cd-43e9-80d8-ecd6519aae52" target="_blank"><button type="button" class="btn btn btn btn btn-info btn-lg">Pessoa Jurídica CNPJ</button></a>
+            <a href="https://app.clicksign.com/fluxia/ad2740fe-8a85-446d-a5f8-26eb15280955" target="_blank"><button type="button" class="btn btn btn btn btn-info btn-lg">Pessoa Física CPF</button></a>
           </div>
         </div>
         <div class="card">
-          <a href="https://protestomg.com.br/" target="_blank"><img class="card-img-top" src="imagens/Dark Blue Modern Business Banner.jpg" alt="Imagem de capa do card"></a>
+          <a href="https://www.pesquisaprotesto.com.br/servico/envio-de-titulo" target="_blank"><img class="card-img-top" src="imagens/Dark Blue Modern Business Banner.jpg" alt="Imagem de capa do card"></a>
           <div class="card-body">
             <h5 class="card-title">Protesto Online</h5>
             <p class="card-text">Envie seus títulos de forma rápida e segura, sem precisar sair de casa! Com nosso serviço de envio de títulos online, você pode enviar seus documentos de forma conveniente e descomplicada. Acesse nosso site e descubra como é fácil começar!</p>
-            <p class="card-text"><small class="text-muted">wwww.protestomg.com.br</small></p>
+             <a href="https://www.pesquisaprotesto.com.br/servico/envio-de-titulo" target="_blank"><button type="button" class="btn btn btn btn-primary btn-lg">Portal de Títulos</button></a>
           </div>
         </div>
         <div class="card">
           <a href="https://wa.me/3196982884" target="_blank"><img class="card-img-top" src="imagens/atendimento_whatsapp.jpg" alt="Imagem de capa do card"></a>
           <div class="card-body">
-            <h5 class="card-title">Atendimento via whatsapp</h5>
+            <h5 class="card-title">Atendimento via Whatsapp</h5>
             <p class="card-text">Estamos aqui para te ajudar de forma rápida e fácil! Agora, você pode entrar em contato conosco pelo WhatsApp para resolver suas dúvidas, solicitar informações ou até mesmo agendar um atendimento. É só enviar uma mensagem e nossa equipe estará pronta para te atender!</p>
+            <a href="https://wa.me/3196982884" target="_blank"><button type="button" class="btn btn btn-success btn-lg">WhatsApp</button></a>
             
           </div>
         </div>
