--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -141,7 +142,7 @@
     <section class="QuemSomos">
         <div class="quemSomosContent">
 
-            <img src="imagens/contrato.jpg" alt="contratos">
+            <img src="imagens/oqueprotesto.jpg" alt="contratos">
         
     </div>
 
@@ -161,7 +162,7 @@
 <div class="quemSomosText">
     <h1>Credor</h1>
 
-    <h2>Como credor, quanto pago para protestar?</h2>
+    <h2>Quanto pago para protestar?</h2>
 
     <p>A Lei nº 23.204/MG, que entrou em vigor em janeiro de 2019 em Minas Gerais, trouxe importantes modificações nas regras de cobrança de emolumentos e taxas notariais para o protesto de títulos e documentos de dívida. Uma das principais mudanças foi a <b>eliminação da exigência de pagamento de taxas pelo credor para realizar o protesto de uma dívida em cartório.</b></p>
     <p>Antes da entrada em vigor dessa lei, o credor precisava arcar com os custos relacionados ao protesto, o que muitas vezes representava uma barreira para a realização desse procedimento. Com a nova legislação, o credor ficou desobrigado de pagar qualquer quantia para protestar um título ou documento de dívida em Minas Gerais, tornando o processo mais acessível e simplificado.</p>
@@ -169,7 +170,7 @@
 </div>
 <div class="quemSomosContent">
 
-    <img src="imagens/contrato.jpg" alt="contratos">
+    <img src="imagens/valorprotesto.jpg" alt="contratos">
 
 </div>
     </section>
