--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <div class="redes-sociais">
         <div class="redes-icons">
             <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
-            <div class="instagran"><i class="fa-brands fa-instagram"></i></div>
+            <a href="https://www.instagram.com/protesto_brumadinho/" target="_blank">
+                <div class="instagran"><i class="fa-brands fa-instagram"></i></div>
+            </a>
             <div class="linkedin"><i class="fa-brands fa-linkedin"></i></div>
             <div class="twitter"><i class="fa-brands fa-x-twitter"></i></div>
         </div>
@@ -80,22 +82,32 @@
         <section class="principal">
         
             <section class="content2">
-                    <div class="carrosel">
-
-                        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                            <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                <img class="d-block w-100" src="imagens/imagemBrumadinho.jpeg" alt="Primeiro Slide">
-                              </div>
-                              <div class="carousel-item">
-                                <a href="https://wa.me/3196982884" target="_blank"><img class="d-block w-100" src="imagens/arteBrumadinho.jpeg" alt="Segundo Slide"></a>
-                              </div>
-                              <div class="carousel-item">
-                                <img class="d-block w-100" src="imagens/noticia-id_607.png" alt="Terceiro Slide">
-                              </div>
-                            </div>
-                          </div>
-            </div>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="imagens/cartório de protesto.jpg" alt="Primeiro Slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="imagens/certidaoProtesto.jpg" alt="Segundo Slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="imagens/cancelamentoAutorizado.jpg" alt="Terceiro Slide">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Anterior</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Próximo</span>
+                    </a>
+                  </div>
 
             </section>
           
@@ -200,7 +212,9 @@
 
         <div class="redes-footer">
             <div class="whatsapp-footer"><i class="fa-brands fa-whatsapp"></i></div>
-            <div class="instagran-footer"><i class="fa-brands fa-instagram"></i></div>
+            <a href="https://www.instagram.com/protesto_brumadinho/" target="_blank">
+                <div class="instagran-footer"><i class="fa-brands fa-instagram"></i></div>
+            </a>
             <div class="linkedin-footer"><i class="fa-brands fa-linkedin"></i></div>
             <div class="twitter-footer"><i class="fa-brands fa-x-twitter"></i></div>
         </div>
