--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
             <div class="mobile-menu">
                 <ul>
                     <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">projeto</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">O Tabelionato</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Serviço</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
                 </ul>
     
                 <div class="login-button">
-                    <button><a href="#">Portal de Títulos</a></button>
+                    <button><a href="https://www.pesquisaprotesto.com.br/servico/envio-de-titulo" target="_blank">Portal de Títulos</a></button>
                 </div>
             </div>
         </div>
