--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="imagens/cartório de protesto.jpg" alt="Primeiro Slide">
+                        <a href="https://www.pesquisaprotesto.com.br/" target="_blank"><img class="d-block w-100" src="imagens/cartório de protesto.jpg" alt="Primeiro Slide"></a>
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="imagens/certidaoProtesto.jpg" alt="Segundo Slide">
+                        <a href="https://wa.me/3196982884" target="_blank"><img class="d-block w-100" src="imagens/certidaoProtesto.jpg" alt="Segundo Slide"></a>
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="imagens/cancelamentoAutorizado.jpg" alt="Terceiro Slide">
+                        <a href="https://wa.me/3196982884" target="_blank"><img class="d-block w-100" src="imagens/cancelamentoAutorizado.jpg" alt="Terceiro Slide"></a>
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -169,7 +169,7 @@
     <p>O protesto de um título gera consequências desfavoráveis para o devedor, como restrições ao crédito, dificuldades para obtenção de financiamentos e empréstimos, além de poder resultar em ações judiciais para cobrança do débito.</p>
 </div>
     </section>
-    <section class="QuemSomos">
+    <section class="QuemSomos segundoQuemSomos">
      
 
 <div class="quemSomosText">
